@@ -629,6 +629,7 @@ All:
 - wxImage handlers can now support multiple extensions (Ivan Krestinin).
 - Added wxFileName::StripExtension() (troelsk).
 - Added wxLOCALE_DATE/TIME_FMT support to wxLocale::GetInfo().
+- Store page setup data directly in wxDocManager (troelsk).
 
 All (Unix):
 
